--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "sync": "node scripts/sync-code-roach-standalone.js",
     "start": "node src/index.js",
-    "test": "jest"
+    "test": "jest",
+    "deploy:infrastructure": "bash scripts/deploy-infrastructure.sh",
+    "deploy:sync-env": "bash scripts/sync-env-vars.sh",
+    "verify:infrastructure": "node scripts/verify-infrastructure.js",
+    "setup:monitoring": "bash scripts/setup-monitoring.sh",
+    "railway:check": "bash scripts/check-railway-project.sh",
+    "railway:link": "bash scripts/link-code-roach-project.sh"
   },
   "keywords": [
     "code-quality",
