--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "dependencies": {
     "@supabase/supabase-js": "^2.87.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "dotenv": "^16.0.0"
   }
 }
