--- a/package.json
+++ b/package.json
@@ -6,13 +6,7 @@
   "scripts": {
     "sync": "node scripts/sync-code-roach-standalone.js",
     "start": "node src/index.js",
-    "test": "jest",
-    "deploy:infrastructure": "bash scripts/deploy-infrastructure.sh",
-    "deploy:sync-env": "bash scripts/sync-env-vars.sh",
-    "verify:infrastructure": "node scripts/verify-infrastructure.js",
-    "setup:monitoring": "bash scripts/setup-monitoring.sh",
-    "railway:check": "bash scripts/check-railway-project.sh",
-    "railway:link": "bash scripts/link-code-roach-project.sh"
+    "test": "jest"
   },
   "keywords": [
     "code-quality",
@@ -25,7 +19,6 @@
   "license": "MIT",
   "dependencies": {
     "@supabase/supabase-js": "^2.87.0",
-    "express": "^4.18.2",
-    "dotenv": "^16.0.0"
+    "express": "^4.18.2"
   }
 }
